--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@angular/service-worker": "~10.2.0",
+    "@types/axios": "^0.14.0",
     "bootstrap-icons": "^1.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
