--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@ngrx/effects": "^11.0.1",
     "@ngrx/entity": "^11.0.1",
     "@ngrx/store": "^11.0.1",
     "@ngrx/store-devtools": "^11.0.1",
     "@types/axios": "^0.14.0",
     "bootstrap-icons": "^1.3.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.6",
+    "screenfull": "^3.3.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
