--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngrx/store-devtools": "^11.0.1",
     "@types/axios": "^0.14.0",
     "bootstrap-icons": "^1.3.0",
+    "ngrx-store-localstorage": "^11.0.0",
     "rxjs": "^6.6.6",
     "screenfull": "^3.3.0",
     "tslib": "^2.0.0",
